added 3rd section

--- a/style.css
+++ b/style.css
@@ -559,112 +559,72 @@ video {
   position: relative;
 }
 
-.top-3 {
-  top: 0.75rem;
+.top-4 {
+  top: 1rem;
 }
 
-.top-2 {
-  top: 0.5rem;
+.-left-10 {
+  left: -2.5rem;
 }
 
-.top-28 {
-  top: 7rem;
+.top-10 {
+  top: 2.5rem;
 }
 
-.top-48 {
-  top: 12rem;
+.-top-10 {
+  top: -2.5rem;
 }
 
-.left-20 {
-  left: 5rem;
+.-left-32 {
+  left: -8rem;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
+.-top-11 {
+  top: -2.75rem;
 }
 
-.bottom-7 {
-  bottom: 1.75rem;
+.-top-3 {
+  top: -0.75rem;
 }
 
-.bottom-2 {
-  bottom: 0.5rem;
+.-top-32 {
+  top: -8rem;
 }
 
-.bottom-1 {
-  bottom: 0.25rem;
+.-top-\[30\%\] {
+  top: -30%;
 }
 
-.top-60 {
-  top: 15rem;
+.-top-\[50\%\] {
+  top: -50%;
 }
 
-.top-52 {
-  top: 13rem;
+.-top-\[80\%\] {
+  top: -80%;
 }
 
-.top-56 {
-  top: 14rem;
+.z-0 {
+  z-index: 0;
 }
 
-.top-64 {
-  top: 16rem;
+.z-10 {
+  z-index: 10;
 }
 
-.top-7 {
-  top: 1.75rem;
+.z-20 {
+  z-index: 20;
 }
 
-.top-72 {
-  top: 18rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-\[100px\] {
-  top: 100px;
-}
-
-.top-\[80px\] {
-  top: 80px;
-}
-
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.top-\[70\%\] {
-  top: 70%;
-}
-
-.top-\[0\%\] {
-  top: 0%;
-}
-
-.top-\[6\%\] {
-  top: 6%;
-}
-
-.top-\[66\%\] {
-  top: 66%;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.top-0 {
-  top: 0px;
+.order-2 {
+  order: 2;
 }
 
 .order-1 {
   order: 1;
 }
 
-.order-2 {
-  order: 2;
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -688,34 +648,6 @@ video {
   margin-top: 5rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
-.mr-16 {
-  margin-right: 4rem;
-}
-
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -724,8 +656,16 @@ video {
   margin-top: 3.5rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
+}
+
+.mr-16 {
+  margin-right: 4rem;
 }
 
 .inline-block {
@@ -744,14 +684,6 @@ video {
   display: grid;
 }
 
-.aspect-square {
-  aspect-ratio: 1 / 1;
-}
-
-.aspect-video {
-  aspect-ratio: 16 / 9;
-}
-
 .h-\[68vh\] {
   height: 68vh;
 }
@@ -764,78 +696,48 @@ video {
   height: 50vh;
 }
 
-.h-\[698vh\] {
-  height: 698vh;
+.h-\[30vh\] {
+  height: 30vh;
 }
 
-.h-\[98vh\] {
-  height: 98vh;
-}
-
-.h-\[90vh\] {
-  height: 90vh;
-}
-
-.h-\[vh\] {
-  height: vh;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-9 {
-  height: 2.25rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-44 {
-  height: 11rem;
+.h-\[25vh\] {
+  height: 25vh;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-screen {
-  width: 100vw;
+.w-24 {
+  width: 6rem;
 }
 
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-72 {
+  width: 18rem;
 }
 
 .w-52 {
   width: 13rem;
 }
 
-.w-\[\] {
-  width: ;
+.w-6 {
+  width: 1.5rem;
 }
 
-.w-\[50vw\] {
-  width: 50vw;
+.w-64 {
+  width: 16rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-\[\] {
+  width: ;
 }
 
 .w-\[30vw\] {
@@ -846,40 +748,97 @@ video {
   width: 40vw;
 }
 
+.w-\[50vw\] {
+  width: 50vw;
+}
+
 .w-\[45vw\] {
   width: 45vw;
+}
+
+.w-\[vw\] {
+  width: vw;
 }
 
 .w-\[60vw\] {
   width: 60vw;
 }
 
-.max-w-screen-lg {
-  max-width: 1024px;
+.w-\[70vw\] {
+  width: 70vw;
 }
 
-.max-w-full {
-  max-width: 100%;
+.w-\[80vw\] {
+  width: 80vw;
 }
 
-.max-w-\[60vw\] {
-  max-width: 60vw;
+.w-screen {
+  width: 100vw;
 }
 
-.max-w-\[70vw\] {
-  max-width: 70vw;
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-56 {
+  width: 14rem;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .max-w-screen-xl {
   max-width: 1280px;
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.max-w-full {
+  max-width: 100%;
 }
 
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+.skew-y-12 {
+  --tw-skew-y: 12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.skew-y-3 {
+  --tw-skew-y: 3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.skew-x-3 {
+  --tw-skew-x: 3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.skew-x-12 {
+  --tw-skew-x: 12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.skew-y-1 {
+  --tw-skew-y: 1deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -890,20 +849,28 @@ video {
   place-content: center;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
   justify-content: center;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
+}
+
+.text-clip {
+  text-overflow: clip;
 }
 
 .rounded-2xl {
@@ -914,8 +881,45 @@ video {
   border-radius: 1.5rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-t-3xl {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+
 .rounded-bl-\[60px\] {
   border-bottom-left-radius: 60px;
+}
+
+.rounded-tr-3xl {
+  border-top-right-radius: 1.5rem;
+}
+
+.rounded-tr-full {
+  border-top-right-radius: 9999px;
+}
+
+.rounded-tr-\[\] {
+  border-top-right-radius: ;
+}
+
+.rounded-tr-\[30px\] {
+  border-top-right-radius: 30px;
+}
+
+.rounded-tr-\[80px\] {
+  border-top-right-radius: 80px;
+}
+
+.rounded-tr-\[120px\] {
+  border-top-right-radius: 120px;
+}
+
+.rounded-bl-\[120px\] {
+  border-bottom-left-radius: 120px;
 }
 
 .border-\[1px\] {
@@ -927,9 +931,9 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.bg-very_light_red {
+.bg-light_red {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 122 133 / var(--tw-bg-opacity));
+  background-color: rgb(255 82 93 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -937,25 +941,36 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-light_red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 82 93 / var(--tw-bg-opacity));
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-very_dark_blue {
+  --tw-gradient-from: 	#1f3f5b;
+  --tw-gradient-to: rgb(31 63 91 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-black_blue {
+  --tw-gradient-from: 	#25252d;
+  --tw-gradient-to: rgb(37 37 45 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-black_blue {
+  --tw-gradient-to: 	#25252d;
+}
+
+.to-very_dark_blue {
+  --tw-gradient-to: 	#1f3f5b;
 }
 
 .bg-cover {
   background-size: cover;
-}
-
-.bg-left {
-  background-position: left;
-}
-
-.bg-left-bottom {
-  background-position: left bottom;
-}
-
-.bg-left-top {
-  background-position: left top;
 }
 
 .bg-center {
@@ -966,13 +981,25 @@ video {
   background-repeat: no-repeat;
 }
 
-.p-24 {
-  padding: 6rem;
+.p-10 {
+  padding: 2.5rem;
 }
 
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-20 {
+  padding: 5rem;
+}
+
+.p-28 {
+  padding: 7rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .py-5 {
@@ -995,57 +1022,12 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
 .pt-5 {
   padding-top: 1.25rem;
 }
 
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
 .pl-8 {
   padding-left: 2rem;
-}
-
-.pl-16 {
-  padding-left: 4rem;
-}
-
-.pl-14 {
-  padding-left: 3.5rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
 }
 
 .text-left {
@@ -1064,10 +1046,6 @@ video {
   font-family: Overpass, sans-serif;
 }
 
-.font-ubantu {
-  font-family: Ubuntu;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1083,34 +1061,19 @@ video {
   line-height: 1;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-semibold {
@@ -1119,10 +1082,6 @@ video {
 
 .font-thin {
   font-weight: 100;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .font-normal {
@@ -1147,11 +1106,6 @@ video {
 .text-greyish_blue {
   --tw-text-opacity: 1;
   color: rgb(200 200 203 / var(--tw-text-opacity));
-}
-
-.text-dark_greyish_blue {
-  --tw-text-opacity: 1;
-  color: rgb(75 88 98 / var(--tw-text-opacity));
 }
 
 .decoration-1 {
@@ -1188,136 +1142,160 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:absolute {
-    position: absolute;
-  }
-
   .sm\:relative {
     position: relative;
-  }
-
-  .sm\:top-\[66\%\] {
-    top: 66%;
-  }
-
-  .sm\:right-1 {
-    right: 0.25rem;
-  }
-
-  .sm\:right-4 {
-    right: 1rem;
-  }
-
-  .sm\:right-6 {
-    right: 1.5rem;
-  }
-
-  .sm\:right-0 {
-    right: 0px;
-  }
-
-  .sm\:-right-0 {
-    right: -0px;
-  }
-
-  .sm\:-right-3 {
-    right: -0.75rem;
-  }
-
-  .sm\:-right-6 {
-    right: -1.5rem;
-  }
-
-  .sm\:-right-8 {
-    right: -2rem;
-  }
-
-  .sm\:-right-1 {
-    right: -0.25rem;
   }
 
   .sm\:-right-12 {
     right: -3rem;
   }
 
-  .sm\:-right-2 {
-    right: -0.5rem;
+  .sm\:-top-24 {
+    top: -6rem;
   }
 
-  .sm\:-right-24 {
-    right: -6rem;
+  .sm\:-top-4 {
+    top: -1rem;
   }
 
-  .sm\:top-\[36\%\] {
-    top: 36%;
+  .sm\:-top-1 {
+    top: -0.25rem;
   }
 
-  .sm\:top-\[26\%\] {
-    top: 26%;
-  }
-
-  .sm\:top-\[16\%\] {
-    top: 16%;
-  }
-
-  .sm\:top-\[5\%\] {
-    top: 5%;
-  }
-
-  .sm\:-right-14 {
-    right: -3.5rem;
-  }
-
-  .sm\:-right-16 {
-    right: -4rem;
-  }
-
-  .sm\:-top-10 {
-    top: -2.5rem;
-  }
-
-  .sm\:-top-8 {
-    top: -2rem;
-  }
-
-  .sm\:-top-6 {
-    top: -1.5rem;
-  }
-
-  .sm\:-top-16 {
-    top: -4rem;
+  .sm\:-top-14 {
+    top: -3.5rem;
   }
 
   .sm\:-top-2 {
     top: -0.5rem;
   }
 
-  .sm\:-top-24 {
-    top: -6rem;
+  .sm\:-top-3 {
+    top: -0.75rem;
   }
 
-  .sm\:z-10 {
-    z-index: 10;
+  .sm\:-top-36 {
+    top: -9rem;
   }
 
-  .sm\:z-20 {
-    z-index: 20;
+  .sm\:-top-48 {
+    top: -12rem;
+  }
+
+  .sm\:-top-\[50\%\] {
+    top: -50%;
+  }
+
+  .sm\:-top-\[10\%\] {
+    top: -10%;
+  }
+
+  .sm\:-top-10 {
+    top: -2.5rem;
+  }
+
+  .sm\:top-10 {
+    top: 2.5rem;
+  }
+
+  .sm\:-top-5 {
+    top: -1.25rem;
+  }
+
+  .sm\:-top-56 {
+    top: -14rem;
+  }
+
+  .sm\:-top-7 {
+    top: -1.75rem;
+  }
+
+  .sm\:-top-72 {
+    top: -18rem;
+  }
+
+  .sm\:-top-\[90\%\] {
+    top: -90%;
+  }
+
+  .sm\:-top-\[150\%\] {
+    top: -150%;
+  }
+
+  .sm\:-top-\[180\%\] {
+    top: -180%;
+  }
+
+  .sm\:-top-\[280\%\] {
+    top: -280%;
+  }
+
+  .sm\:-top-\[250\%\] {
+    top: -250%;
+  }
+
+  .sm\:-top-\[200\%\] {
+    top: -200%;
+  }
+
+  .sm\:-top-\[20\%\] {
+    top: -20%;
+  }
+
+  .sm\:left-10 {
+    left: 2.5rem;
+  }
+
+  .sm\:-top-\[0\%\] {
+    top: -0%;
+  }
+
+  .sm\:-top-\[60\%\] {
+    top: -60%;
+  }
+
+  .sm\:-top-\[70\%\] {
+    top: -70%;
+  }
+
+  .sm\:-top-44 {
+    top: -11rem;
+  }
+
+  .sm\:-top-\[65\%\] {
+    top: -65%;
+  }
+
+  .sm\:-top-\[5\%\] {
+    top: -5%;
+  }
+
+  .sm\:-top-\[45\%\] {
+    top: -45%;
+  }
+
+  .sm\:-top-\[55\%\] {
+    top: -55%;
   }
 
   .sm\:z-0 {
     z-index: 0;
   }
 
+  .sm\:z-10 {
+    z-index: 10;
+  }
+
   .sm\:z-40 {
     z-index: 40;
   }
 
-  .sm\:order-2 {
-    order: 2;
-  }
-
   .sm\:order-1 {
     order: 1;
+  }
+
+  .sm\:order-2 {
+    order: 2;
   }
 
   .sm\:float-right {
@@ -1344,36 +1322,20 @@ video {
     margin-right: 4rem;
   }
 
-  .sm\:block {
-    display: block;
-  }
-
-  .sm\:h-\[65vh\] {
-    height: 65vh;
-  }
-
-  .sm\:h-\[90vh\] {
-    height: 90vh;
-  }
-
   .sm\:h-\[60vh\] {
     height: 60vh;
   }
 
-  .sm\:h-\[55vh\] {
-    height: 55vh;
+  .sm\:h-\[50vh\] {
+    height: 50vh;
   }
 
-  .sm\:h-\[vh\] {
-    height: vh;
+  .sm\:w-screen {
+    width: 100vw;
   }
 
-  .sm\:max-w-\[60vw\] {
-    max-width: 60vw;
-  }
-
-  .sm\:max-w-\[655vw\] {
-    max-width: 655vw;
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:max-w-\[55vw\] {
@@ -1382,10 +1344,6 @@ video {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .sm\:grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
@@ -1406,10 +1364,6 @@ video {
     overflow: hidden;
   }
 
-  .sm\:overflow-clip {
-    overflow: clip;
-  }
-
   .sm\:px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -1421,6 +1375,42 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:relative {
+    position: relative;
+  }
+
+  .md\:z-40 {
+    z-index: 40;
+  }
+
+  .md\:z-10 {
+    z-index: 10;
+  }
+
+  .md\:z-0 {
+    z-index: 0;
+  }
+
+  .md\:order-1 {
+    order: 1;
+  }
+
+  .md\:order-2 {
+    order: 2;
+  }
+
+  .md\:mr-16 {
+    margin-right: 4rem;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:overflow-hidden {
+    overflow: hidden;
+  }
+
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
