--- a/style.css
+++ b/style.css
@@ -559,56 +559,16 @@ video {
   position: relative;
 }
 
-.top-4 {
-  top: 1rem;
+.z-10 {
+  z-index: 10;
 }
 
-.-left-10 {
-  left: -2.5rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
-}
-
-.-left-32 {
-  left: -8rem;
-}
-
-.-top-11 {
-  top: -2.75rem;
-}
-
-.-top-3 {
-  top: -0.75rem;
-}
-
-.-top-32 {
-  top: -8rem;
-}
-
-.-top-\[30\%\] {
-  top: -30%;
-}
-
-.-top-\[50\%\] {
-  top: -50%;
-}
-
-.-top-\[80\%\] {
-  top: -80%;
+.z-40 {
+  z-index: 40;
 }
 
 .z-0 {
   z-index: 0;
-}
-
-.z-10 {
-  z-index: 10;
 }
 
 .z-20 {
@@ -623,13 +583,18 @@ video {
   order: 1;
 }
 
-.m-auto {
-  margin: auto;
+.m-0 {
+  margin: 0px;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mt-2 {
@@ -664,12 +629,24 @@ video {
   margin-right: 2rem;
 }
 
-.mr-16 {
-  margin-right: 4rem;
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
 }
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -684,6 +661,10 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-\[68vh\] {
   height: 68vh;
 }
@@ -696,112 +677,24 @@ video {
   height: 50vh;
 }
 
-.h-\[30vh\] {
-  height: 30vh;
-}
-
 .h-\[25vh\] {
   height: 25vh;
+}
+
+.h-\[40vh\] {
+  height: 40vh;
+}
+
+.h-64 {
+  height: 16rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[30vw\] {
-  width: 30vw;
-}
-
-.w-\[40vw\] {
-  width: 40vw;
-}
-
-.w-\[50vw\] {
-  width: 50vw;
-}
-
-.w-\[45vw\] {
-  width: 45vw;
-}
-
-.w-\[vw\] {
-  width: vw;
-}
-
-.w-\[60vw\] {
-  width: 60vw;
-}
-
-.w-\[70vw\] {
-  width: 70vw;
-}
-
-.w-\[80vw\] {
-  width: 80vw;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
 .w-28 {
   width: 7rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-32 {
-  width: 8rem;
 }
 
 .max-w-screen-xl {
@@ -812,31 +705,6 @@ video {
   max-width: 100%;
 }
 
-.skew-y-12 {
-  --tw-skew-y: 12deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.skew-y-3 {
-  --tw-skew-y: 3deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.skew-x-3 {
-  --tw-skew-x: 3deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.skew-x-12 {
-  --tw-skew-x: 12deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.skew-y-1 {
-  --tw-skew-y: 1deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -845,32 +713,51 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .place-content-center {
   place-content: center;
 }
 
-.items-start {
-  align-items: flex-start;
+.place-items-start {
+  place-items: start;
 }
 
 .items-center {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
 
-.overflow-hidden {
-  overflow: hidden;
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
 }
 
-.text-clip {
-  text-overflow: clip;
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded-2xl {
@@ -881,37 +768,8 @@ video {
   border-radius: 1.5rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-t-3xl {
-  border-top-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
-}
-
 .rounded-bl-\[60px\] {
   border-bottom-left-radius: 60px;
-}
-
-.rounded-tr-3xl {
-  border-top-right-radius: 1.5rem;
-}
-
-.rounded-tr-full {
-  border-top-right-radius: 9999px;
-}
-
-.rounded-tr-\[\] {
-  border-top-right-radius: ;
-}
-
-.rounded-tr-\[30px\] {
-  border-top-right-radius: 30px;
-}
-
-.rounded-tr-\[80px\] {
-  border-top-right-radius: 80px;
 }
 
 .rounded-tr-\[120px\] {
@@ -920,6 +778,10 @@ video {
 
 .rounded-bl-\[120px\] {
   border-bottom-left-radius: 120px;
+}
+
+.rounded-tr-4xl {
+  border-top-right-radius: 4rem;
 }
 
 .border-\[1px\] {
@@ -941,8 +803,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+.bg-black_blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 45 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -955,18 +818,8 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-black_blue {
-  --tw-gradient-from: 	#25252d;
-  --tw-gradient-to: rgb(37 37 45 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .to-black_blue {
   --tw-gradient-to: 	#25252d;
-}
-
-.to-very_dark_blue {
-  --tw-gradient-to: 	#1f3f5b;
 }
 
 .bg-cover {
@@ -981,20 +834,20 @@ video {
   background-repeat: no-repeat;
 }
 
+.p-7 {
+  padding: 1.75rem;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
 .p-10 {
   padding: 2.5rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-20 {
-  padding: 5rem;
-}
-
-.p-28 {
-  padding: 7rem;
 }
 
 .px-20 {
@@ -1046,6 +899,10 @@ video {
   font-family: Overpass, sans-serif;
 }
 
+.font-ubantu {
+  font-family: Ubuntu;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1071,8 +928,13 @@ video {
   line-height: 1.5rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -1154,140 +1016,28 @@ video {
     top: -6rem;
   }
 
-  .sm\:-top-4 {
-    top: -1rem;
-  }
-
-  .sm\:-top-1 {
-    top: -0.25rem;
-  }
-
-  .sm\:-top-14 {
-    top: -3.5rem;
-  }
-
-  .sm\:-top-2 {
-    top: -0.5rem;
-  }
-
-  .sm\:-top-3 {
-    top: -0.75rem;
-  }
-
   .sm\:-top-36 {
     top: -9rem;
-  }
-
-  .sm\:-top-48 {
-    top: -12rem;
-  }
-
-  .sm\:-top-\[50\%\] {
-    top: -50%;
-  }
-
-  .sm\:-top-\[10\%\] {
-    top: -10%;
-  }
-
-  .sm\:-top-10 {
-    top: -2.5rem;
-  }
-
-  .sm\:top-10 {
-    top: 2.5rem;
-  }
-
-  .sm\:-top-5 {
-    top: -1.25rem;
-  }
-
-  .sm\:-top-56 {
-    top: -14rem;
-  }
-
-  .sm\:-top-7 {
-    top: -1.75rem;
-  }
-
-  .sm\:-top-72 {
-    top: -18rem;
-  }
-
-  .sm\:-top-\[90\%\] {
-    top: -90%;
-  }
-
-  .sm\:-top-\[150\%\] {
-    top: -150%;
-  }
-
-  .sm\:-top-\[180\%\] {
-    top: -180%;
-  }
-
-  .sm\:-top-\[280\%\] {
-    top: -280%;
-  }
-
-  .sm\:-top-\[250\%\] {
-    top: -250%;
-  }
-
-  .sm\:-top-\[200\%\] {
-    top: -200%;
-  }
-
-  .sm\:-top-\[20\%\] {
-    top: -20%;
-  }
-
-  .sm\:left-10 {
-    left: 2.5rem;
-  }
-
-  .sm\:-top-\[0\%\] {
-    top: -0%;
-  }
-
-  .sm\:-top-\[60\%\] {
-    top: -60%;
-  }
-
-  .sm\:-top-\[70\%\] {
-    top: -70%;
-  }
-
-  .sm\:-top-44 {
-    top: -11rem;
-  }
-
-  .sm\:-top-\[65\%\] {
-    top: -65%;
-  }
-
-  .sm\:-top-\[5\%\] {
-    top: -5%;
-  }
-
-  .sm\:-top-\[45\%\] {
-    top: -45%;
   }
 
   .sm\:-top-\[55\%\] {
     top: -55%;
   }
 
-  .sm\:z-0 {
-    z-index: 0;
+  .sm\:left-10 {
+    left: 2.5rem;
+  }
+
+  .sm\:-top-20 {
+    top: -5rem;
+  }
+
+  .sm\:-right-11 {
+    right: -2.75rem;
   }
 
   .sm\:z-10 {
     z-index: 10;
-  }
-
-  .sm\:z-40 {
-    z-index: 40;
   }
 
   .sm\:order-1 {
@@ -1322,12 +1072,28 @@ video {
     margin-right: 4rem;
   }
 
+  .sm\:mt-52 {
+    margin-top: 13rem;
+  }
+
+  .sm\:mt-36 {
+    margin-top: 9rem;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:h-\[60vh\] {
     height: 60vh;
   }
 
   .sm\:h-\[50vh\] {
     height: 50vh;
+  }
+
+  .sm\:h-auto {
+    height: auto;
   }
 
   .sm\:w-screen {
@@ -1338,6 +1104,10 @@ video {
     width: 100%;
   }
 
+  .sm\:w-\[100vw\] {
+    width: 100vw;
+  }
+
   .sm\:max-w-\[55vw\] {
     max-width: 55vw;
   }
@@ -1346,12 +1116,20 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
 
   .sm\:flex-col {
     flex-direction: column;
+  }
+
+  .sm\:place-content-center {
+    place-content: center;
   }
 
   .sm\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -1372,6 +1150,10 @@ video {
   .sm\:pl-14 {
     padding-left: 3.5rem;
   }
+
+  .sm\:text-left {
+    text-align: left;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1379,40 +1161,22 @@ video {
     position: relative;
   }
 
-  .md\:z-40 {
-    z-index: 40;
-  }
-
-  .md\:z-10 {
-    z-index: 10;
-  }
-
-  .md\:z-0 {
-    z-index: 0;
-  }
-
-  .md\:order-1 {
-    order: 1;
-  }
-
-  .md\:order-2 {
-    order: 2;
-  }
-
   .md\:mr-16 {
     margin-right: 4rem;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:overflow-hidden {
-    overflow: hidden;
+  .md\:mt-36 {
+    margin-top: 9rem;
   }
 
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:mt-10 {
+    margin-top: 2.5rem;
   }
 }
