--- a/style.css
+++ b/style.css
@@ -697,6 +697,14 @@ video {
   width: 7rem;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
 .max-w-screen-xl {
   max-width: 1280px;
 }
@@ -766,6 +774,10 @@ video {
 
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-bl-\[60px\] {
@@ -848,6 +860,10 @@ video {
 
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-20 {
@@ -968,6 +984,11 @@ video {
 .text-greyish_blue {
   --tw-text-opacity: 1;
   color: rgb(200 200 203 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .decoration-1 {
